2000-05-04  Jacob Berkman  <jacob@helixcode.com>

	* configure.in: check for gnome-libs 1.0.59

	* *: add icon support

2000-04-23  Ian Peters  <itp@gnu.org>

	* game-docs.make: shamelessly stole and adapted gnome-core's
	  applet-docs.make because docs suck

2000-04-11  Ian Peters  <itp@gnu.org>

	* configure.in: don't need a pthread check anymore

2000-04-09  Ian Peters  <itp@gnu.org>

	* Makefile.am: build iagno2/plugins/swedishchef

2000-04-09  Ian Peters  <itp@gnu.org>

	* configure.in: Tweaked check for gdk-pixbuf (it was broken)

2000-04-08  Ian Peters  <itp@gnu.org>

	* configure.in: Added check for gdk-pixbuf, since gnibbles and Iagno2
	  now require them to build.  Also, build Makefiles in Iagno2, just
	  don't build Iagno2 by default.

	* Makefile.am: Added support for gdk-pixbuf check.  Only build gnibbles
	  if gdk-pixbuf was found.

2000-04-08  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): added Lithuanian language

2000-01-31  Yuan-Chung Cheng <platin@linux.org.tw>

        * configure.in: Added "zh_CN.GB2312" to ALL_LINGUAS.

1999-11-30  Yuri Syrota <rasta@renome.rovno.ua>

	* configure.in: Added Ukrainian to ALL_LINGUAS

1999-10-15  Ian Peters  <itp@gnu.org>

	* iagno2/*: added iagno2

1999-10-13  Ian Peters  <itp@gnu.org>

	* HACKING: added describing the branch

1999-09-28  Ian Peters  <itp@gnu.org>

	* configure.in: calling it 1.0.50

1999-09-28  Ian Peters  <itp@gnu.org>

	* Changes to gnome-games.spec.in from Dax Kelson @gurulabs.  Should
	  hopefully fix the .score files being installed for Red Hat (#2398).

1999-09-28  Ian Peters  <itp@gnu.org>

	* Added intl to SUBDIRS in Makefile.am and intl/Makefile to AC_OUTPUT in
	  configure.in.  Do I really know what I'm doing?  No.  But everyone
	  else does it, and it closes #2403.  :)

1999-09-26  Ian Peters  <itp@gnu.org>

	* Calling it 1.0.42 in configure.in

1999-09-26  Ian Peters  <itp@gnu.org>

	* Martin helped me rename the gnothello and gyahtzee directories on cvs.