@@ -110,7 +110,25 @@ fi
 %defattr(-, root, root)
 
 %doc AUTHORS COPYING ChangeLog NEWS README
-%attr(-, root, games) %{prefix}/bin/*
+%attr(-, root, games) %{prefix}/bin/GnomeScott
+%attr(-, root, games) %{prefix}/bin/ctali
+%attr(-, root, games) %{prefix}/bin/freecell
+%attr(-, root, games) %{prefix}/bin/gataxx
+%attr(2111, root, games) %{prefix}/bin/glines
+%attr(2111, root, games) %{prefix}/bin/gnibbles
+%attr(2111, root, games) %{prefix}/bin/gnobots2
+%attr(2111, root, games) %{prefix}/bin/gnome-stones
+%attr(2111, root, games) %{prefix}/bin/gnome-xbill
+%attr(2111, root, games) %{prefix}/bin/gnometris
+%attr(2111, root, games) %{prefix}/bin/gnomine
+%attr(2111, root, games) %{prefix}/bin/gnotravex  
+%attr(2111, root, games) %{prefix}/bin/gnotski
+%attr(2111, root, games) %{prefix}/bin/gtali
+%attr(2111, root, games) %{prefix}/bin/gturing
+%attr(2111, root, games) %{prefix}/bin/iagno
+%attr(2111, root, games) %{prefix}/bin/mahjongg
+%attr(2111, root, games) %{prefix}/bin/same-gnome
+%attr(-, root, games) %{prefix}/bin/sol
 %config /etc/sound/events
 %{prefix}/share/gnome/apps/Games/*
 %{prefix}/share/gnibbles/*
