@@ -1,3 +1,8 @@
+2000-05-04  Ian Peters  <itp@gnu.org>
+
+	* gnome-games.spec.in: correctly set games to sgid games if they are
+	  using the score stuff (patch from Dennis Bjorklund via BTS)
+
 2000-05-04  Jacob Berkman  <jacob@helixcode.com>
 
 	* configure.in: check for gnome-libs 1.0.59
